Set up Swagger api docs
